[gd_scene load_steps=6 format=2]

[ext_resource path="res://Health.tres" type="DynamicFont" id=1]
[ext_resource path="res://sett.gd" type="Script" id=2]
[ext_resource path="res://popupback.tres" type="StyleBox" id=3]
[ext_resource path="res://universal.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.509804 )

[node name="screen" type="Node"]
script = ExtResource( 2 )

[node name="universal" parent="." instance=ExtResource( 4 )]

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="Options" type="GridContainer" parent="TabContainer/General"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckButton" parent="TabContainer/General/Options"]
margin_right = 874.0
margin_bottom = 96.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/hover_pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paths" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[connection signal="tree_exiting" from="." to="." method="_on_screen_tree_exiting"]
[connection signal="toggled" from="TabContainer/General/Options/CheckBox" to="." method="_on_CheckBox_toggled"]
